--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<script type="text/javascript">window.location.href="https://kiyannan.github.io/";</script>
+<!DOCTYPE html>
+<html>
+  <script type="text/javascript">
+    window.location.href="https://kiyannan.github.io/";
+  </script>
+</html>
